# expert-matcher

./: .env_local  .gitignore  README.md  index.html  prompts.toml  pyproject.toml  run.ps1  run.sh  run_all.ps1
.github/workflows/: build-verification.yml
data/: experience_merge.sql  experience_merge_2.sql  import.bat  sorting_updates.sql
docs/: DifferentiationQuestions.json  db_migration.md  dynamic_consultant_profile_response.json  implementation.md  sample_differentiation_questions.json  state_example.json
expert-matcher-ui/: index.html  package-lock.json  package.json  switch_local.ps1  switch_prod.ps1  tsconfig.app.json
expert-matcher-ui/scripts/: replace_script_section_local.js  replace_script_section_prod.js
expert-matcher-ui/src/: App.css  App.tsx  index.css  main.tsx
expert-matcher-ui/src/components/: AvailableConsultants.tsx  Body.tsx  Candidates.tsx  DifferentiationQuestions.tsx  Disclaimer.tsx  Header.tsx  Home.tsx  Main.tsx  MarkdownOverlay.tsx  NavigationButtons.tsx  Question.tsx  Spinner.tsx  Suggestions.tsx  common.ts
expert-matcher-ui/src/context/: AppStore.ts  ChatStore.ts  HamburgerStore.ts
expert-matcher-ui/src/css/: dialogue.css  fonts.css  layout.css
expert-matcher-ui/src/hooks/: useCurrentMessage.ts  useDarkMode.ts  useHamburger.ts  useHandleNext.ts  useRestart.ts  useSendDifferentiationQuestionVotes.ts  useWebsockets.ts
expert-matcher-ui/src/i18n/: i18n.ts
expert-matcher-ui/src/lib/: apiClient.ts  formatters.ts  scrollSupport.ts  sessionFunctions.ts  websocketFunctions.ts
expert-matcher-ui/src/types/: differentiation_questions.ts  dynamic_consultant_profile.ts  global.d.ts  question.ts  session.ts  ws.ts
src/consultant_finder/config/: __init__.py  config.py  logger.py
src/consultant_finder/model/: question.py
src/expert_matcher/: __init__.py
src/expert_matcher/config/: __init__.py  config.py  logger.py  toml_support.py
src/expert_matcher/model/: configuraton.py  consultant.py  consultant_factory.py  differentiation_questions.py  question.py  (+4 more)
templates/: candidate_report.html
tests/: __init__.py  test_config.py
tests/integration/: provider.py  test_db_persistence.py
tests/services/: __init__.py
(+32 files in other folders)
