[project]
name = "expert_matcher"
version = "0.1.0"
description = "A consultant finder application"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "python-dotenv>=1.0.1",
    "psycopg[binary]>=3.2.5",
    "psycopg-pool>=3.2.5",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.2",
    "tomli>=2.2.1",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/expert_matcher"]

[dependency-groups]
dev = [
    "black>=24.8.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
]
